# cads-common

./: .cruft.json  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yaml  on-push.yml
cads_common/: logging.py  portal.py
docs/: conf.py  index.md
tests/: test_00_version.py  test_01_logging.py  test_10_portal.py
