[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "structlog"
]
description = "Common utilities shared amongs EDSS packages."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-common"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
exclude = [
  "tests/"
]
strict = true

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_common"]

[tool.setuptools_scm]
write_to = "cads_common/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
